--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "express-socket.io-session": "^1.3.5",
+    "http": "^0.0.1-security",
     "jsdom": "^20.0.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "session": "^0.1.0",
+    "socket.io": "^4.5.2"
   }
 }
