--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-socket.io-session": "^1.3.5",
     "http": "^0.0.1-security",
     "jsdom": "^20.0.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "session": "^0.1.0",
     "socket.io": "^4.5.2"
