--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "heroku": "^7.63.4",
     "jsdom": "^20.0.0",
     "mysql2": "^2.3.3"
